<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/palette_primary_opaque"
    android:divider="?android:dividerHorizontal"
    android:dividerPadding="16dp"
    android:orientation="vertical"
    android:showDividers="middle"
    tools:context="com.hixos.smartwp.triggers.geofence.ProviderFixActivity">

    <RelativeLayout
        android:id="@+id/layout_wifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/clickable_background_masked"
        android:clickable="true"
        android:paddingBottom="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="4dp">

        <ImageView
            android:id="@+id/imageview_wifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_wifi_fix" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/imageview_wifi"
            android:layout_toRightOf="@id/imageview_wifi"
            android:orientation="vertical"
            android:paddingEnd="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingStart="4dp">

            <view xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/textview_wifi"
                style="@style/ClickableText"
                class="com.hixos.smartwp.widget.FontTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:gravity="center_vertical|start"
                android:text="@string/wifi_fix_title"
                custom:textFont="RobotoCondensed-Regular" />

            <view xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/textview_wifi_desc"
                style="@style/LightNeutralText"
                class="com.hixos.smartwp.widget.FontTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:gravity="center_vertical|start"
                android:text="@string/wifi_fix_desc"
                custom:textFont="RobotoCondensed-Regular" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/clickable_background_masked"
        android:clickable="true"
        android:paddingBottom="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="4dp">

        <ImageView
            android:id="@+id/imageview_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_location_fix" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/imageview_location"
            android:layout_toRightOf="@id/imageview_location"
            android:orientation="vertical"
            android:paddingEnd="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:paddingStart="4dp">

            <view xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/textview_location"
                style="@style/ClickableText"
                class="com.hixos.smartwp.widget.FontTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:gravity="center_vertical|start"
                android:text="@string/location_fix_title"
                custom:textFont="RobotoCondensed-Regular" />

            <view xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:id="@+id/textview_location_desc"
                style="@style/LightNeutralText"
                class="com.hixos.smartwp.widget.FontTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:gravity="center_vertical|start"
                android:text="@string/location_fix_desc"
                custom:textFont="RobotoCondensed-Regular" />
        </LinearLayout>
    </RelativeLayout>

    <CheckBox
        android:id="@+id/checkbox_dontshowagain"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="start|center_vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:paddingBottom="4dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="4dp"
        android:text="@string/donot_show_again" />
</LinearLayout>
