<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_medium"
        android:text="@string/dialog_tod_picker_title_start"
        android:id="@+id/textViewTitle"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <com.hixos.smartwp.widget.TimeDisplay
            android:id="@+id/timedisplay_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:layout_marginLeft="16dp"
            custom:textColor="@color/accent_green"
            custom:textTimeSize="@dimen/text_xlarge"
            custom:textPeriodSize="@dimen/text_xsmall"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_navigation_arrow_forward"
            android:id="@+id/imageview_time_arrow"
            android:layout_gravity="center_vertical" />

        <com.hixos.smartwp.widget.TimeDisplay
            android:id="@+id/timedisplay_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:alpha="0.5"
            android:layout_marginRight="16dp"
            custom:textTimeSize="@dimen/text_xlarge"
            custom:textPeriodSize="@dimen/text_xsmall"
            custom:textColor="@color/accent_red"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:clipToPadding="false"
        android:layout_gravity="center_horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:layout_gravity="center_horizontal">
            <view
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                class="com.hixos.smartwp.widget.TodPickerView"
                android:id="@+id/todpicker_start" />

            <view
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                class="com.hixos.smartwp.widget.TodPickerView"
                android:id="@+id/todpicker_end"
                android:visibility="gone" />
        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-16dp">

            <view
                android:layout_width="48dp"
                android:layout_height="48dp"
                class="com.hixos.smartwp.widget.CheckableFrameLayout"
                android:background="@drawable/background_ampm_toggle"
                android:id="@+id/toggle_am"
                android:layout_gravity="left">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:textSize="@dimen/tod_picker_hour_text_size"
                    android:text="@string/am"/>
            </view>

            <view
                android:layout_width="48dp"
                android:layout_height="48dp"
                class="com.hixos.smartwp.widget.CheckableFrameLayout"
                android:background="@drawable/background_ampm_toggle"
                android:id="@+id/toggle_pm"
                android:layout_gravity="right">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAllCaps="true"
                    android:textSize="@dimen/tod_picker_hour_text_size"
                    android:text="@string/pm"/>
            </view>
        </FrameLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/clickable_background_gray"
        android:id="@+id/framelayout_main_button"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/next"
            android:drawableRight="@drawable/ic_action_navigation_arrow_forward"
            android:id="@+id/textview_main_button"
            android:layout_gravity="center" />
    </FrameLayout>

</LinearLayout>